<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_instruction"
        android:title="@string/instructiontitle"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log"
        android:title="@string/log"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_converter"
        android:title="@string/gradeconverter"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/tick_list"
        android:title="@string/ticklist"
        android:visible="true"
        app:showAsAction="never" />
</menu>