<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hueco"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayoutStart">

        <TextView
            android:id="@+id/hangTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/hangtime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/hangEditText"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:hint="Sec."
            android:background="@color/colorSecondaryText"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/pauseTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/pausetime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/pauseEditText"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:hint="Sec."
            android:background="@color/colorSecondaryText"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/roundNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/numberrounds"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/roundsEditText"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:hint="Rounds"
            android:background="@color/colorSecondaryText"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resttime"
            android:textColor="@color/colorAccent"
            android:id="@+id/restTimeTextView"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/restEditText"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:hint="Sec."
            android:background="@color/colorSecondaryText"
            android:layout_row="5"
            android:layout_column="0"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"  />

        <TextView
            android:id="@+id/setsTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/numbersets"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/setsEditText"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:hint="Sets"
            android:imeOptions="actionDone"
            android:background="@color/colorSecondaryText"
            android:layout_row="5"
            android:layout_column="1"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />
    </GridLayout>

    <GridLayout
        android:id="@+id/page_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <Button
            android:id="@+id/presetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/buttonwhite"
            android:text="@string/defaultbutton"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="@dimen/log_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/powerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/buttonwhite"
            android:text="@string/powerbutton"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/log_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/custButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@drawable/buttonwhite"
            android:text="@string/custbutton"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="@dimen/log_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="4"
            android:background="@drawable/buttonwhite"
            android:text="@string/savebutton"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/log_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="4"
            android:background="@drawable/buttonprimary"
            android:elevation="2dp"
            android:text="@string/readybutton"
            android:textColor="@color/colorSecondaryText"
            android:textSize="28sp"
            android:textStyle="bold" />
    </GridLayout>

</RelativeLayout>
