<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dream"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimerActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout">

        <TextView
            android:id="@+id/hangTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/hang"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pauseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/pause"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00"
            android:id="@+id/hangText"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/timer_size"
            android:textStyle="bold"
            android:padding="3dp"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00"
            android:id="@+id/pauseText"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/timer_size"
            android:textStyle="bold"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="3dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/restTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/rest"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00"
            android:id="@+id/restText"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/timer_size"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="3dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/soundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="0dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_volume_up_white_36dp" />

        <TextView
            android:id="@+id/roundTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/round"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/roundsText"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/sets_text_size"
            android:textStyle="bold"
            android:layout_row="5"
            android:layout_column="0"
            android:padding="3dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/setTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/set"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/sets_text_size"
            android:textStyle="bold" />

    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="2dp"
        android:text="@string/startbutton"
        android:textColor="@color/colorSecondaryText"
        android:id="@+id/startButton"
        android:background="@drawable/buttonprimary"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
